Fix navbar vertical alignment and spacing
- Remove default h1 and ul margins that were pushing the title
  and links towards the top of the nav bar
- Replace padding-left on title elements with consistent nav
  padding so all items align to the same baseline
- Switch nav to justify-content: space-between for natural
  spacing between title and links

--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -2,17 +2,17 @@
 	display: flex;
 	background-color: #666666;
 	color: white;
-	padding: 0 0.1rem;
+	padding: 0.5rem 1rem;
 	text-align: left;
 	align-items: center;
-	justify-items: center;
+	justify-content: space-between;
 }
 
 
 .nav-text {
 	display: none;
-	padding-left: 2rem;
 	text-decoration: none;
+	margin: 0;
 }
 
 .nav-text,
@@ -23,8 +23,8 @@
 
 .nav-text-small {
 	font-size: 1.5rem;
-	padding-left: 2rem;
 	font-weight: normal;
+	margin: 0;
 }
 
 .menu-list {
@@ -32,6 +32,8 @@
 	justify-content: space-between;
 	list-style-type: none;
 	align-items: center;
+	margin: 0;
+	padding: 0;
 }
 
 li {
@@ -45,13 +47,12 @@ button {
 @media (min-width: 650px) {
 	.nav-text {
 		display: block;
-		padding-left: 2rem;
 		font-weight: normal;
 		font-size: 1.5rem;
+		margin: 0;
 	}
 
 	.nav-text-small {
 		display: none;
-		padding-left: 2rem;
 	}
 }
